# wander

./: .gitignore  AWS-EC2-TESTING.md  COMPLETION-SUMMARY-DAY10.md  DAY10-FIX-SUMMARY.md  DAY10-SUMMARY.md  DAY5-SUMMARY.md  DAY6-SUMMARY.md  DAY7-SUMMARY.md  DAY8-SUMMARY.md  DAY9-SUMMARY.md  DELIVERY_SUMMARY.txt  DEPLOY_TIMEOUT_FIX.md  DOMAIN_MODELS_SUMMARY.md  EC2-UPDATE-INSTRUCTIONS.md  EC2_QWEN_DEPLOYMENT.md  HANDOFF-USER-ACTION-REQUIRED.md  QUICK-TEST.md  QUICKSTART-AWS.md  QUICKSTART-EC2-FIX.md  README.md  REFACTORING_SUMMARY.md  RUN-AUTOMATED-TESTS.md  SSM_DOCUMENTATION_INDEX.md  SSM_IAM_POLICIES_AND_DOCUMENTS.json  SSM_QUICK_REFERENCE.md  SSM_SESSION_MANAGER_MIGRATION_GUIDE.md  TESTING-INSTRUCTIONS.md  aws-ec2-ssm-examples.sh  aws-ec2-test-ssm-simple.sh  aws-ec2-test-ssm.sh  aws-setup.sh  build-model-service.sh  connect-ec2.sh  create-test-ec2.sh  demo-rag-simple.sh  demo-rag-value.sh  deploy-qwen-model.sh  docker-compose.yml  ec2-fix-and-test.sh  run-day10-test-internal.ps1  (+23 more)
services/agent-orchestrator/: .env.example  APPLICATION_LAYER.md  Dockerfile  pyproject.toml
services/agent-orchestrator/app/: __init__.py  config.py  dependencies.py  main.py
services/agent-orchestrator/app/agents/: __init__.py  analyzer.py  base.py  output_parser.py
services/agent-orchestrator/app/api/: __init__.py  health.py  workflows.py
services/agent-orchestrator/app/application/: __init__.py  ports.py
services/agent-orchestrator/app/consumers/: __init__.py  stream_consumer.py
services/agent-orchestrator/app/infrastructure/: __init__.py
services/agent-orchestrator/app/llm/: __init__.py  custom_llm.py
services/agent-orchestrator/app/models/: __init__.py  requests.py
services/agent-orchestrator/app/tools/: __init__.py  knowledge_base.py
services/agent-orchestrator/app/workflows/: __init__.py  processor.py
services/agent-orchestrator/tests/: conftest.py  test_health.py
services/indexing/: .env.example  Dockerfile  populate_kb.py  pyproject.toml  sample_data.json
services/indexing/app/: __init__.py  config.py  main.py
services/indexing/scripts/: seed_data.py
(+90 files in other folders)
